<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context="com.example.admin.w1wenavigationdrawer.MainActivity"

    >

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:fontFamily="sans-serif"
        android:gravity="bottom|end"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textColor="@color/colorWhite"
        android:textSize="100sp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tbnAC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorDarkGray"
                android:fontFamily="sans-serif"
                android:onClick="allCancel"
                android:text="@string/ac"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnPlusMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorDarkGray"
                android:fontFamily="sans-serif"
                android:onClick="convertToNegative"
                android:text="@string/plusminus"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnPercentage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorDarkGray"
                android:fontFamily="sans-serif"
                android:onClick="convertToPercentage"
                android:text="@string/percentage"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/Division"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:fontFamily="sans-serif"
                android:onClick="selectOperation"
                android:text="@string/div"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >


            <Button
                android:id="@+id/btnSeven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_7"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnEight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_8"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnNine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_9"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:fontFamily="sans-serif"
                android:onClick="selectOperation"
                android:text="@string/x"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnFour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_4"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnFive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_5"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnSix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_6"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:fontFamily="sans-serif"
                android:onClick="selectOperation"
                android:text="@string/dash"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_1"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_2"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_3"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@color/colorOrange"
                android:fontFamily="sans-serif"
                android:onClick="selectOperation"
                android:text="@string/plus"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btnZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="2"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="updateTextView"
                android:text="@string/_0"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="3"
                android:background="@color/colorSoftGray"
                android:fontFamily="sans-serif"
                android:onClick="addDotToResult"
                android:text="@string/dot"
                android:textColor="@color/colorBlack"
                android:textSize="36sp"/>

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:layout_weight="3"
                android:background="@color/colorOrange"
                android:fontFamily="sans-serif"
                android:onClick="executeOperation"
                android:text="@string/equal"
                android:textColor="@color/colorWhite"
                android:textSize="36sp"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>